<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_myaccount" />
        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_mysubscriptions" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_view_category_24"
            android:title="@string/menu_shopbycategory" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_rateapp"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/menu_rateourapp" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>